# rustygb

./: .gitignore  Cargo.toml  LICENSE  README.md
.claude/: settings.local.json
src/: apu.rs  bus.rs  cartridge.rs  cpu.rs  joypad.rs  lib.rs  main.rs  ppu.rs  timer.rs  wasm.rs
web/: README.md  index.html  main.js
